# Combining-the-motion-planning-of-Franka-and-Ranger-Mini-without-servo

./: .gitattributes  .gitignore  README.md  add_base_collision.py  final_robot.urdf
composite_robot_description/: CMakeLists.txt
composite_robot_description/urdf/: franka_arm.xacro
four_wheel_steering_controller/: CMakeLists.txt  four_wheel_steering_controller.xml  package.xml
four_wheel_steering_controller/include/four_wheel_steering_controller/: four_wheel_steeering_controller_parameter.hpp  speed_limiter.hpp  visibility_control.hpp
four_wheel_steering_controller/src/: four_wheel_steering_controller.cpp  four_wheel_steering_controller_parameters.yaml  odometry.cpp  speed_limiter.cpp
franka_description/: CHANGELOG.rst  package.xml
franka_description/.docker/: Dockerfile
franka_description/launch/: visualize_franka.launch.py  visualize_franka_duo.launch.py
franka_description/robots/common/: franka_arm.ros2_control.xacro
franka_description/robots/mobile_fr3_duo_v0_2/: mobile_fr3_duo_v0_2.urdf.xacro
franka_description/scripts/: create_urdf.py
my_composite_robot_config/config/: franka_ranger_combined.urdf.xacro  ros2_controllers.yaml  servo_config.yaml
my_composite_robot_config/launch/: bringup_gazebo.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
ranger_mini_v2_control/: package.xml
ranger_mini_v2_control/config/: joystick.yaml
ranger_mini_v2_control/launch/: joystick.launch.py
ranger_mini_v2_description/: CMakeLists.txt
ranger_mini_v2_description/rviz/: turtlebot3.rviz
ranger_mini_v2_description/urdf/include/ranger_mini_v2/: lidar.urdf
ranger_mini_v2_gazebo/launch/: tb3.launch.py
ranger_mini_v2_gazebo/models/turtlebot3_house/: model.sdf
ranger_mini_v2_gazebo/worlds/: empty.world  turtlebot3_house.world  waffle.model  withnarrowspace.world
src/composite_robot_description/: package.xml
src/composite_robot_description/config/: controllers.yaml
src/composite_robot_description/launch/: display_sim.launch.py
src/composite_robot_description/urdf/: check_plugin.urdf  mobile_manipulator.urdf.xacro
src/four_wheel_steering_controller/include/four_wheel_steering_controller/: four_wheel_steering_controller.hpp  odometry.h
src/four_wheel_steering_controller/src/: ReadMe.txt
src/my_composite_robot_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_composite_robot_config/config/: franka_ranger_combined.ros2_control.xacro  franka_ranger_combined.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  servo_config.yaml
src/my_composite_robot_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/ranger_mini_v2_control/: CMakeLists.txt
src/ranger_mini_v2_control/config/: controller.yaml
src/ranger_mini_v2_control/launch/: control.launch.py
src/ranger_mini_v2_description/: package.xml
src/ranger_mini_v2_description/meshes/components/: ReadMe.txt
src/ranger_mini_v2_description/rviz/: swerve.rviz  tb3.rviz
src/ranger_mini_v2_description/urdf/: ranger_mini_v2.urdf  turtlebot3_waffle.urdf
src/ranger_mini_v2_description/urdf/include/ranger_mini_v2/: components.urdf  ros2_control.urdf
src/ranger_mini_v2_gazebo/: CMakeLists.txt  package.xml
src/ranger_mini_v2_gazebo/launch/: gazebo.launch.py  multirobot.launch.py  turtlebot3.launch.py
src/ranger_mini_v2_gazebo/worlds/: narrow_space.world  turtlebot3_world.world  with_narrow_spaces.world
src/urdf_geometry_parser/include/urdf_geometry_parser/: urdf_geometry_parser.h
urdf_geometry_parser/: CMakeLists.txt  package.xml
urdf_geometry_parser/src/: urdf_geometry_parser.cpp
vr_vision_teleop/launch/: start_planner.launch.py
vr_vision_teleop/src/: robot_planner.cpp  vr_servo_bridge.cpp
