<package format="2">
  <name>urdf_geometry_parser</name>
  <version>0.1.0</version>
  <description>Extract geometry value of a vehicle from urdf.</description>

  <maintainer email="2000charith@gmail.com">Charith</maintainer>


  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf_geometry_parser</url>
  <url type="bugtracker">https://github.com/ros-controls/urdf_geometry_parser/issues</url>
  <url type="repository">https://github.com/ros-controls/urdf_geometry_parser.git</url>

  <author email="vincent.rousseau@irstea.fr">Vincent Rousseau</author>

  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
