<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ranger_mini_v2_gazebo</name>
  <version>0.0.0</version>
  <description>Ranger Mini V2 Gazebo Sim</description>
  <maintainer email="2000charith@gmail.com">charitha</maintainer>
  <license>BSD-2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
